Fixing footer spacing on a-propos page

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,8 @@
 .footer {
-    text-align : center;
-    background : #000000;
+    text-align: center;
+    background: #000000;
     width: 100%;
+    margin: 0;
 }
 
 .footer-logo {
@@ -10,12 +11,12 @@
 }
 
 .footer-text {
-    color : #FFFFFF;
+    color: #ffffff;
     font-size: 24px;
     padding: 30px 0;
 }
 
-@media screen and (max-width : 740px) {
+@media screen and (max-width: 740px) {
     .footer-text {
         font-size: 12px;
         padding-bottom: 60px;
