--- a/src/components/Thumb/Thumb.css
+++ b/src/components/Thumb/Thumb.css
@@ -23,17 +23,19 @@
     right: 20px;
 }
 
-@media screen and (max-width : 940px) {
+@media screen and (max-width: 940px) {
     .thumb {
-        width: 100%;
+        width: 400px;
+        max-width: 400px;
+        min-width: 400px;
         margin: 20px auto;
     }
- }
+}
 
- @media screen and (max-width : 740px) {
+@media screen and (max-width: 740px) {
     .thumb {
         width: 100%;
         height: 255px;
         margin: 0 0 20px;
     }
- }
+}
