--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,8 +1,13 @@
-.dropdown__container {
-    margin: 0 200px 60px ;
+.about {
+    display: flex;
+    flex-direction: column;
 }
 
-@media screen and (max-width : 1340px) {
+.dropdown__container {
+    margin: 0 200px 60px;
+}
+
+@media screen and (max-width: 1340px) {
     .dropdown__container {
         margin: 0 100px 40px;
     }
@@ -12,7 +17,7 @@
     }
 }
 
-@media screen and (max-width : 740px) {
+@media screen and (max-width: 740px) {
     .dropdown__container {
         margin: 0 0 20px;
     }
